base/argocd/16-repo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  selector:
    app: argocd-repo-server
  ports:
  - name: server
    port: 8081
    targetPort: 8081
