base/argocd/argocd-dex-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-dex-server
  namespace: argocd
spec:
  selector:
    app: argocd-dex-server
  ports:
  - name: http
    port: 5556
    targetPort: 5556
